gcp/k8s/mkt/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mkt-blog
  namespace: marketing
  labels:
    app: mkt-blog
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mkt-blog
    spec:
      containers:
      - name: hello-world
        image: eu.gcr.io/khaly-221308/hello-world
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
        ports:
        - containerPort: 8080
        # Readness Probe
        # Readness Probe
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 10
          periodSeconds: 30
          successThreshold: 1
        # Liveness Probe
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 30
