gcp/k8s/mkt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkt-blog
  namespace: marketing
  labels:
    app: mkt-blog
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    app: mkt-blog
